--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,38 @@
-<h1>Burger Destroy</h1>
-<h2>Add a burger, destroy a burger.</h2>
-<ul>
-    {{#each burgers}} {{#unless devoured}} {{> cats/cat-block sleep=true}} {{/unless}} {{/each}}
-</ul>
-<h2></h2>
-<ul>
-    {{#each burgers}} {{#if devoured}} {{> cats/cat-block sleep=false}} {{/if}} {{/each}}
-</ul>
-<h2>Add a burger</h2>
-<form class="create-form">
-    <div class="form-group">
-        <label for="ca">Cat Name:</label>
-        <input type="text" id="ca" name="name">
-    </div>
-    <div class="form-group">
-        <label for="devoured">devoured?</label>
-        <br>
-        <input type="radio" name="devoured" value="1" checked> Devoured!
-        <br>
-        <input type="radio" name="devoured" value="0"> Awake
-    </div>
-    <button type="submit">Add Cat</button>
-</form>
+<div class="container">
+    <h1>Burger Destroy</h1>
+        <h2>Add a burger, destroy a burger.</h2>
+        <div class="all-burgers-section">
+            <div class="added-burgers-section">
+                <ul>
+                    {{#each burgers}} 
+                        {{#unless devoured}}  
+                            <div class="undevoured-burgers-section"></div>
+                                <div class="form-group">
+                                    {{burger_name}}
+                                </div>
+                             <button type="submit" class="devour-button" data-id="{{id}}">Devour it!</button>
+                        {{/unless}} 
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="devoured-burgers-section">
+                <h2 id="devoured-burgers-header">Devoured Burgers</h2>
+                <ul>
+                    {{#each burgers}} 
+                        {{#if devoured}} 
+                            <div class="burger-list-item">
+                                {{burger_name}}
+                            </div>
+                        {{/if}} 
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+    <h2>Add a burger</h2>
+        <form class="create-form">
+            <div class="form-group">
+                <input type="text" id="add-burger-name" name="name">
+                <button type="submit" id="burger-submit">Add Burger</button>
+            </div>
+    </form>
+</div>
