--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-    <title>Burger destroyer</title>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/cats.js"></script>
+    <title>Burger App</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/assets/js/app.js"></script>
 </head>
 
 <body>
     {{{ body }}}
+
+    <script>   
+        
+    </script>
 </body>
 
 </html>
